k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: andrusdiaz-home
spec:
  selector:
    app: andrusdiaz-home
  ports:
    - name: http
      port: 80
      targetPort: http
